@@ -1,6 +1,6 @@
 ; $Id$
 name = Bluemarine
-description = Table-based multi-column theme with a marine and ash color scheme.
+description = Tableless theme with a marine and ash color scheme.
 version = VERSION
 core = 7.x
 engine = phptemplate
